--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
     <script>
         // CONFIGURATION - Update this with your Google Apps Script Web App URL
-        const SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL'; // Replace with your deployed script URL
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx4K12NmDUCfd7MVrt7EfKogyGm4NFtgea-fKYtSuu2fM8yuwDZSJqA169oijlz1Rre/exec'; // Replace with your deployed script URL
         
         document.getElementById('registrationForm').addEventListener('submit', async function(e) {
             e.preventDefault();
