--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <div class="whatsapp-section">
                     <h3>📱 Join Our WhatsApp Group</h3>
                     <p>Stay updated with all the latest information about the event!</p>
-                    <a href="https://chat.whatsapp.com/your-group-link" target="_blank" class="whatsapp-link">
+                    <a href="https://chat.whatsapp.com/FjHnxha9c3T2wS4cIRob1p?mode=ems_share_t" target="_blank" class="whatsapp-link">
                         Click here to join WhatsApp Group
                     </a>
                 </div>
@@ -441,14 +441,14 @@
                         </div>
                         <div class="radio-item">
                             <input type="radio" id="whatsapp-no" name="whatsappJoined" value="No" required>
-                            <label for="whatsapp-no">No, I'll join later</label>
+                            <label for="whatsapp-no"></label>
                         </div>
                     </div>
                     <div class="error" id="whatsappError">Please confirm if you've joined the WhatsApp group</div>
                 </div>
 
                 <button type="submit" class="submit-btn">
-                    Register for Freshers Meet '25
+                    Sign In for Freshers Meet '25
                 </button>
 
                 <div class="success-message" id="successMessage">
